update index.html and responsive css

--- a/css/style.scss
+++ b/css/style.scss
@@ -46,7 +46,7 @@ $color2: #8ECDDD;
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba($color: #000000, $alpha: 0.4);
+    background: rgba($color: #000000, $alpha: 0.6);
     z-index: 1;
 }
 
@@ -78,7 +78,15 @@ $color2: #8ECDDD;
 }
 
 /* Responsive css */
+@media only screen and (min-width:768px) and (max-width:991px) {
+    .carousel-caption {
+        bottom: 350px;
+    }
 
+    .carousel-caption p {
+        width: 100%;
+    }
+}
 
 @media screen and (max-width: 767px) {
     .navbar-nav {
@@ -86,7 +94,7 @@ $color2: #8ECDDD;
     }
 
     .carousel-caption {
-        bottom: 250px;
+        bottom: 280px;
     }
 
     .carousel-caption h1 {
@@ -96,7 +104,8 @@ $color2: #8ECDDD;
     .carousel-caption p {
         width: 100%;
         line-height: 1.6;
-        font-size: 12px;
+        font-size: 14px;
+        padding-bottom: 8px;
 
     }
 }
