--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.6);
   z-index: 1;
 }
 
@@ -69,12 +69,20 @@
 }
 
 /* Responsive css */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .carousel-caption {
+    bottom: 350px;
+  }
+  .carousel-caption p {
+    width: 100%;
+  }
+}
 @media screen and (max-width: 767px) {
   .navbar-nav {
     text-align: center;
   }
   .carousel-caption {
-    bottom: 250px;
+    bottom: 280px;
   }
   .carousel-caption h1 {
     font-size: 35px;
@@ -82,6 +90,7 @@
   .carousel-caption p {
     width: 100%;
     line-height: 1.6;
-    font-size: 12px;
+    font-size: 14px;
+    padding-bottom: 8px;
   }
 }/*# sourceMappingURL=style.css.map */
