--- a/css/style.css
+++ b/css/style.css
@@ -2,29 +2,28 @@
   color: #22668D;
 }
 
-.section-padding {
-  padding: 100px 0;
+.secondary {
+  background-color: #22668D;
 }
 
 .carousel-item {
   height: 100vh;
-  min-height: 300px;
 }
 
 .carousel-caption {
-  bottom: 220px;
+  bottom: 35%;
   z-index: 2;
 }
 
 .carousel-caption h1 {
-  font-size: 45px;
+  font-size: 2rem;
   text-transform: capitalize;
   letter-spacing: 2px;
   margin-top: 25px;
 }
 
 .carousel-caption p {
-  width: 60%;
+  width: 75%;
   margin: auto;
   font-size: 18px;
   line-height: 1.9;
@@ -39,6 +38,11 @@
   left: 0;
   background: rgba(0, 0, 0, 0.6);
   z-index: 1;
+}
+
+.w-100 {
+  width: 100%;
+  height: 100vh;
 }
 
 .navbar-nav a {
@@ -64,33 +68,48 @@
   color: #000000;
 }
 
-.w-100 {
-  height: 100vh;
+.social-icons {
+  color: #8ECDDD;
+  font-size: 24px;
+  margin: 10px;
 }
 
-/* Responsive css */
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .carousel-caption {
-    bottom: 350px;
-  }
-  .carousel-caption p {
-    width: 100%;
+.social-icons:hover {
+  color: #22668D;
+}
+
+/* Responsive css 
+@media only screen and (min-width:768px) and (max-width:991px) {}
+
+@media screen and (max-width: 820px) {
+    .carousel-caption h1 {
+        font-size: 1.7rem;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .navbar-nav {
+        text-align: center;
+    }
+
+     .carousel-caption p {
+
+        line-height: 1.6;
+        font-size: 14px;
+        padding-bottom: 8px;
+
+    }
+}*/
+@media (min-width: 768px) {
+  .news-input {
+    width: 50%;
   }
 }
-@media screen and (max-width: 767px) {
-  .navbar-nav {
-    text-align: center;
+@media (max-width: 768px) {
+  .carousel-item {
+    height: 60vh;
   }
-  .carousel-caption {
-    bottom: 280px;
-  }
-  .carousel-caption h1 {
-    font-size: 35px;
-  }
-  .carousel-caption p {
-    width: 100%;
-    line-height: 1.6;
-    font-size: 14px;
-    padding-bottom: 8px;
+  .w-100 {
+    height: 60vh;
   }
 }/*# sourceMappingURL=style.css.map */
