--- a/css/style.scss
+++ b/css/style.scss
@@ -11,33 +11,36 @@ $color2: #8ECDDD;
     }
 }
 
-.section-padding {
-    padding: 100px 0;
+.secondary {
+    background-color: $secondary;
 }
+
 
 .carousel-item {
     height: 100vh;
-    min-height: 300px;
+
 }
 
 .carousel-caption {
-    bottom: 220px;
+    bottom: 35%;
     z-index: 2;
 }
 
 .carousel-caption h1 {
-    font-size: 45px;
+    font-size: 2rem;
     text-transform: capitalize;
     letter-spacing: 2px;
     margin-top: 25px;
 }
 
+
 .carousel-caption p {
-    width: 60%;
+    width: 75%;
     margin: auto;
     font-size: 18px;
     line-height: 1.9;
 }
+
 
 .carousel-inner::before {
     content: '';
@@ -48,6 +51,11 @@ $color2: #8ECDDD;
     left: 0;
     background: rgba($color: #000000, $alpha: 0.6);
     z-index: 1;
+}
+
+.w-100 {
+    width: 100%;
+    height: 100vh;
 }
 
 .navbar-nav a {
@@ -73,18 +81,24 @@ $color2: #8ECDDD;
     color: #000000;
 }
 
-.w-100 {
-    height: 100vh;
+.social-icons {
+    color: $color2;
+    font-size: 24px;
+    margin: 10px;
 }
 
-/* Responsive css */
-@media only screen and (min-width:768px) and (max-width:991px) {
-    .carousel-caption {
-        bottom: 350px;
-    }
+.social-icons:hover {
+    color: $secondary;
+}
 
-    .carousel-caption p {
-        width: 100%;
+
+
+/* Responsive css 
+@media only screen and (min-width:768px) and (max-width:991px) {}
+
+@media screen and (max-width: 820px) {
+    .carousel-caption h1 {
+        font-size: 1.7rem;
     }
 }
 
@@ -93,19 +107,28 @@ $color2: #8ECDDD;
         text-align: center;
     }
 
-    .carousel-caption {
-        bottom: 280px;
-    }
+     .carousel-caption p {
 
-    .carousel-caption h1 {
-        font-size: 35px;
-    }
-
-    .carousel-caption p {
-        width: 100%;
         line-height: 1.6;
         font-size: 14px;
         padding-bottom: 8px;
 
+    }
+}*/
+@media (min-width:768px) {
+    .news-input {
+        width: 50%;
+    }
+
+}
+
+@media (max-width:768px) {
+    .carousel-item {
+        height: 60vh;
+
+    }
+
+    .w-100 {
+        height: 60vh;
     }
 }
