--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,12 +3,26 @@ $secondary: #22668D;
 $color1: #FFCC70;
 $color2: #8ECDDD;
 
+body::before {
+    display: block;
+    content: '';
+    height: 60px;
+}
+
 .container {
     .navbar-brand {
         .logo {
             color: $secondary !important;
         }
     }
+}
+
+.color2 {
+    background-color: $color2;
+}
+
+.color1 {
+    background-color: $color1;
 }
 
 .primary {
@@ -19,14 +33,19 @@ $color2: #8ECDDD;
     background-color: $secondary;
 }
 
+.secondary-t {
+    color: $secondary;
+}
 
-.carousel-item {
+
+#carouselExampleCaptions .carousel-item {
     height: 100vh;
 
 }
 
+
 .carousel-caption {
-    bottom: 35%;
+    bottom: 40%;
     z-index: 2;
 }
 
@@ -46,7 +65,7 @@ $color2: #8ECDDD;
 }
 
 
-.carousel-inner::before {
+#carouselExampleCaptions .carousel-inner::before {
     content: '';
     position: absolute;
     width: 100%;
@@ -95,6 +114,16 @@ $color2: #8ECDDD;
     color: $secondary;
 }
 
+.social-icons-team {
+    color: $secondary;
+    font-size: 21px;
+    margin: 5px;
+}
+
+.social-icons-team:hover {
+    filter: brightness(60%);
+}
+
 
 
 
@@ -128,18 +157,26 @@ $color2: #8ECDDD;
 
 }
 
+@media (max-width:992px) {
+    .navbar-nav {
+        text-align: center;
+    }
+}
+
 @media (max-width:768px) {
-    .carousel-item {
-        height: 60vh;
+
+
+    #carouselExampleCaptions .carousel-item {
+        height: 50vh;
 
     }
 
     .w-100 {
-        height: 60vh;
+        height: 50vh;
     }
 
     .carousel-caption {
-        bottom: 20%;
+        bottom: 25%;
     }
 
     .social-icons {
