--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -128,6 +128,7 @@ body::before {
 
 
 
+
 /* Responsive css 
 @media only screen and (min-width:768px) and (max-width:991px) {}
 
@@ -160,6 +161,10 @@ body::before {
 @media (max-width:992px) {
     .navbar-nav {
         text-align: center;
+    }
+
+    .reverse {
+        flex-direction: column-reverse !important;
     }
 }
 
