--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -125,32 +125,22 @@ body::before {
 }
 
 
+.form-container {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 20px 40px;
+    border-radius: 10px;
+    background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url(../img/everest.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 
-
-
-
-/* Responsive css 
-@media only screen and (min-width:768px) and (max-width:991px) {}
-
-@media screen and (max-width: 820px) {
-    .carousel-caption h1 {
-        font-size: 1.7rem;
-    }
 }
 
-@media screen and (max-width: 767px) {
-    .navbar-nav {
-        text-align: center;
-    }
 
-     .carousel-caption p {
 
-        line-height: 1.6;
-        font-size: 14px;
-        padding-bottom: 8px;
 
-    }
-}*/
+
+
+/* Responsive css */
 @media (min-width:768px) {
     .news-input {
         width: 50%;
