add links to a tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,10 @@ body::before {
   background-repeat: no-repeat;
 }
 
+.title {
+  font-family: "Handlee", cursive;
+}
+
 /* Responsive css */
 @media (min-width: 768px) {
   .news-input {
